tests/const_param_method_overload_nonconst_bad.stderr
tests/const_param_method_overload_nonconst_bad.hop:22:17: error: HOP2077: const parameter 'fmt' requires a const-evaluable argument
